vlib/v/checker/tests/option_wrapped_cmp_op_err.out
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:3:10: error: Option needs to be unwrapped before comparing them
    1 | fn main() {
    2 |     a := ?string("hi")
    3 |     println(a == 'hi')
      |             ^
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
Details: Use var? to unwrap it first
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:4:18: error: Option needs to be unwrapped before comparing them
    2 |     a := ?string("hi")
    3 |     println(a == 'hi')
    4 |     println('hi' == a)
      |                     ^
    5 |     println(a != 'hi')
    6 |     println('hi' != a)
Details: Use var? to unwrap it first
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:5:10: error: Option needs to be unwrapped before comparing them
    3 |     println(a == 'hi')
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
      |             ^
    6 |     println('hi' != a)
    7 | }
Details: Use var? to unwrap it first
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:6:18: error: Option needs to be unwrapped before comparing them
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
    6 |     println('hi' != a)
      |                     ^
    7 | }
Details: Use var? to unwrap it first
